2007-08-01 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/database.py:

	Fixing bug #310

2007-07-31 Santiago Dueñas <sduenas@gsyc.escet.urjc.es> 

	* man/mlstats.1:
	
	Typo error fixed. This closes the bug #309.

2007-06-13 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/version.py:
	* mlstats.egg-info/SOURCES.txt:
	* mlstats.egg-info/PKG-INFO:
	* debian/control:
	* debian/changelog:
	* debian/rules:
	* MANIFEST.in:
	* NEWS:

	Release 0.3.2	
	
2007-06-13 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* setup.py:
	* man/mlstats.1:
	* pymlstats/__init__.py:
	* README:

	Added man page. The Examples section has been removed from the
	help message, and it is now present in the man page.

	Fixed minor typo in README.

2007-06-13 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* pymlstats/__init__.py:
	* pymlstats/main.py:
	* pymlstats/analyzer.py:
	* pymlstats/version.py:
	* setup.py:
	
	Fixed help message, that still contained the old command line
	options.
	
	Added --quiet option.
	
	Added --web-user and --web-password options to retrieve mailing
	list archives that are set to private.

2007-05-10 Israel Herraiz <herraiz@gsyc.escet.urjc.es>

	* setup.py:
	* ChangeLog:

	Added dependency for the Python modules.

	Fixed the format of the ChangeLog. From now on, the format of this
	log should follow the same style that this entry.

2007-04-23  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
	
	* pymlstats/database.py:
	
	Changed the handling of exceptions. When a unknown error happens
	parsing a message, the message is ignored and the message-id
	written to stderr along with a warning message.	When connecting to
	a database, unknown errors are written to stderr and the execution
	stopped. This is related to bug #237, in order to get more
	meaningful and brief error messages. 

	Added one more error case when trying to connect the database
	(error 1044, authorized user but not for that database).

2007-04-23  Israel Herraiz <herraiz@gsyc.escet.urjc.es>
	